syntax = "proto3";

option csharp_namespace = "Saas.Dal";

package SpProperty;

message SpProperty{
    int32 id = 1;
    string fullName = 2;
    string schema = 3;
    string type = 4;
    string op = 5;
}
message SpParameter{
  string spName = 1;
  int32 spId = 2;
  string name = 3;
  string type = 4;
  int32 maxLength = 5;
  int32 precision = 6;
  int32 scale = 7;
  int32 order = 8;
  bool isOutput = 9;
  string collation = 10;
}