syntax = "proto3";

option csharp_namespace = "Saas.Entity.Language";

package Language;

import "Protos/referenceData.proto";

message Keys{
  message Key{
    int32 Key = 1;
    int32 Type = 2;
    int32 RootId = 3;
    int32 Object_id = 4;
    int32 Id = 5;
    string KeyName = 6;
    string Code = 7;    
  }
  repeated Key values = 1;
}
message Dictionary{
  int32 RootId = 1;
  ReferenceData.SupportedLanguages.CodeLanguage Language = 2;
  Keys Keys = 3;
  repeated DictKeyValuePair content = 4;
}
message DictKeyValuePair{
  int32 Key = 1;
  string Val = 2;  
}